# demo-unified-assets-tracker

./: .gitignore  README.md
api/: Cargo.toml  readme.md  unisat_api.txt
api/src/: coingecko.rs  coins.json  handler.rs  main.rs  model.rs  response.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  main.tsx
ui/src/components/Layout/: Header.tsx  Layout.tsx
ui/src/constants/: contracts.ts
ui/src/hooks/: useBalances.ts  useConnect.ts
ui/src/pages/Wallet/: AssetModal.tsx  AssetsTable.tsx  SendAssetForm.tsx  Wallet.tsx
ui/src/types/: unspentio.d.ts
ui/src/utils/: btcsnap.ts  currencies.ts
