[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.2.2", features = ["v4"] }
reqwest = { version =  "0.11.22", features = ["json"] }
num-bigint = "0.4.4"
num-traits = "0.2.17"